# trains-rust

./: Cargo.toml  README.md  VERIFICATION_REPORT.md
.github/workflows/: ci.yml
bench/: README.md  SPEC.md
bench/coordinator/: coordinator.py  faults.py  invariants.py  orchestrator.py  requirements.txt
bench/coordinator/tests/: test_coordinator.py  test_faults.py  test_invariants.py  test_orchestrator.py
bench/infrastructure/: .gitignore  app.py  cdk.json  requirements.txt
bench/infrastructure/stacks/: __init__.py  compute_stack.py  network_stack.py  results_stack.py
bench/reports/: TRAINS-EC2-evaluation.md  trains-reconfiguration-study.md
benches/: Cargo.toml
benches/results/: 2026-05-19.jsonl  2026-06-13-openraft.jsonl
crates/trains-ao/: Cargo.toml
crates/trains-ao/src/: adapter.rs  envelope.rs  lib.rs
crates/trains-cli/: Cargo.toml
crates/trains-cli/src/: main.rs  node.rs  ring.rs
crates/trains-cli/tests/: live_crash_masking.rs  reconfig_integration.rs  reconfig_wire_integration.rs  trace_pipeline.rs
crates/trains-core/: Cargo.toml  build.rs
crates/trains-core/src/: clock.rs  delivery.rs  lib.rs  node.rs  recovery.rs  trace.rs  types.rs
crates/trains-core/tests/: adversarial.rs  ring_integration.rs
crates/trains-net/: Cargo.toml  build.rs
crates/trains-net/src/: codec.rs  lib.rs  quic_transport.rs  snapshot.rs  tls.rs  transport.rs  wire.rs
crates/trains-recovery/: Cargo.toml
crates/trains-recovery/src/: failure_detector.rs  lib.rs  view_change.rs
docs/: ADR-001-rejoin-virtual-synchrony-2026-06-15.md  DESIGN-trace-validator-membership-2026-06-24.md  DRAFT-proof-to-production-survey.md  WHITEPAPER-rejoin-and-readmission-2026-06-16.md  blog-simatic.md  blog.md  diagrams.md  evolution-s3-lessons.md  lineage-and-train-protocol.md  paper-benchmarks.md  paper.md
scripts/: run_benches.sh
verification/drt/: Cargo.toml
verification/drt/proptest-regressions/: lib.txt
verification/drt/src/: lib.rs
verification/ivy/: README.md  trains.ivy
verification/reference/: Cargo.toml
verification/reference/src/: lib.rs
verification/tla/: Apalache.tla  TRAINS.cfg  TRAINS.tla  TRAINS_Inductive.tla  TRAINS_MC.cfg  TRAINS_MC.tla  TRAINS_MC_N4.cfg  TRAINS_MC_N4_bigger.cfg  TRAINS_MC_TO.cfg  TRAINS_MC_TO_liveness.cfg
