[workspace]
resolver = "2"
members = [
    "crates/trains-core",
    "crates/trains-net",
    "crates/trains-recovery",
    "crates/trains-ao",
    "crates/trains-cli",
    "verification/reference",
    "verification/drt",
    "benches",
]

[workspace.package]
version      = "0.1.0"
edition      = "2021"
rust-version = "1.78"
authors      = ["Yves Eychenne <yeychenne@yahoo.fr>"]
license      = "MIT"

[workspace.dependencies]
# Async runtime
tokio        = { version = "1", features = ["full"] }
tokio-rustls = "0.26"
# Low-level socket options — used by trains-net to set TCP_USER_TIMEOUT on ring
# sockets so a dead peer is detected within seconds instead of TCP's default
# ~15 min retransmit budget (PR-RD-6). `features=["all"]` exposes the
# platform-extension methods (set_tcp_user_timeout / tcp_user_timeout); without
# it, socket2 ships only the bare-minimum surface.
socket2      = { version = "0.5", features = ["all"] }
rustls       = { version = "0.23", default-features = false, features = ["ring", "std"] }
rustls-pemfile = "2"
rcgen        = "0.13"
# QUIC transport (rustls TLS provider; default-features=false avoids s2n-tls / OpenSSL build)
s2n-quic     = { version = "1", default-features = false, features = ["provider-tls-rustls", "provider-address-token-default"] }

# Serialisation
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
bincode      = { version = "2", features = ["serde"] }

# Errors & tracing
thiserror    = "2"
anyhow       = "1"
tracing      = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap         = { version = "4", features = ["derive"] }

# Hashing (SPKI fingerprints)
sha2         = "0.10"
hex          = "0.4"

# Testing & verification
proptest     = "1"
# Kani is injected by `cargo kani` when its harnesses are compiled
# (cfg(kani)). It is intentionally NOT a workspace dep here.

[profile.release]
lto           = true
codegen-units = 1

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }
