[package]
name        = "trains-core"
description = "I/O-free TRAINS ring protocol state machine — the verifiable kernel"
version.workspace    = true
edition.workspace    = true
rust-version.workspace = true

[dependencies]
serde      = { workspace = true }
serde_json = { workspace = true }
thiserror  = { workspace = true }

[dev-dependencies]
proptest   = { workspace = true }
bincode    = { workspace = true }

[lints]
workspace = true
