[package]
name        = "trains-net"
description = "TLS ring transport for the TRAINS protocol"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true

[dependencies]
trains-core    = { path = "../trains-core" }
tokio          = { workspace = true }
tokio-rustls   = { workspace = true }
socket2        = { workspace = true }
rustls         = { workspace = true }
s2n-quic       = { workspace = true }
rustls-pemfile = { workspace = true }
rcgen          = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
bincode        = { workspace = true }
thiserror      = { workspace = true }
tracing        = { workspace = true }
sha2           = { workspace = true }
hex            = { workspace = true }

[dev-dependencies]
tokio                = { workspace = true }
tracing-subscriber   = { workspace = true }

[lints]
workspace = true
